packages/vlossom/src/components/vs-chip/VsChip.css
.vs-chip {
    --vs-chip-width: initial;
    --vs-chip-height: initial;

    --vs-chip-backgroundColor: initial;
    --vs-chip-border: initial;
    --vs-chip-borderRadius: initial;
    --vs-chip-padding: initial;
    --vs-chip-opacity: initial;

    --vs-chip-fontColor: initial;

    @apply relative box-border inline-flex items-center justify-center select-none hover:brightness-96 active:brightness-92;

    opacity: var(--vs-chip-opacity, 1);
    border: var(--vs-chip-border, 1px solid var(--vs-line-color));
    border-radius: var(--vs-chip-borderRadius, calc(var(--vs-default-comp-height-sm) / 2));
    background-color: var(--vs-chip-backgroundColor, var(--vs-comp-bg));
    padding: var(--vs-chip-padding, 0 0.6rem);
    width: var(--vs-chip-width, auto);
    height: var(--vs-chip-height, var(--vs-default-comp-height-sm));
    min-height: var(--vs-chip-height, var(--vs-default-comp-height-sm));
    color: var(--vs-chip-fontColor, var(--vs-comp-font));
    font-size: var(--vs-font-size-sm);
    line-height: 1;
    user-select: none;

    .vs-icon-container {
        @apply flex items-center justify-center;

        border: var(--vs-chip-border, 1px solid var(--vs-line-color));
        border-radius: 50%;
        width: calc(var(--vs-chip-height, var(--vs-default-comp-height-sm)) * 0.75);
        height: calc(var(--vs-chip-height, var(--vs-default-comp-height-sm)) * 0.75);
        color: var(--vs-chip-fontColor, var(--vs-comp-font));
    }

    .vs-chip-close-button {
        @apply cursor-pointer;
    }

    &:has(.vs-chip-icon) {
        padding-left: 0.15rem;
    }

    &:has(.vs-chip-close-button) {
        padding-right: 0.15rem;
    }

    .vs-chip-content {
        @apply flex items-center justify-center;
        padding: 0 0.4rem;
        white-space: nowrap;
    }

    &.vs-small {
        border-radius: var(--vs-chip-borderRadius, calc(var(--vs-default-comp-height-xs) / 2));
        padding: var(--vs-chip-padding, 0 0.2rem);
        height: var(--vs-chip-height, var(--vs-default-comp-height-xs));
        min-height: var(--vs-chip-height, var(--vs-default-comp-height-xs));
        font-size: var(--vs-font-size-xs);

        .vs-icon-container {
            width: calc(var(--vs-chip-height, var(--vs-default-comp-height-xs)) * 0.75);
            height: calc(var(--vs-chip-height, var(--vs-default-comp-height-xs)) * 0.75);
        }

        &:has(.vs-chip-icon) {
            padding-left: 0.1rem;
        }

        &:has(.vs-chip-close-button) {
            padding-right: 0.1rem;
        }
    }

    &.vs-outline {
        @apply bg-transparent;

        border: var(--vs-chip-border, 1px solid var(--vs-primary-comp-bg));
        color: var(--vs-chip-fontColor, var(--vs-primary-comp-bg));
    }

    &.vs-primary {
        @apply hover:brightness-104 active:brightness-108;

        border: var(--vs-chip-border, 1px solid var(--vs-primary-comp-bg));
        background-color: var(--vs-chip-backgroundColor, var(--vs-primary-comp-bg));
        color: var(--vs-chip-fontColor, var(--vs-primary-comp-font));

        .vs-icon-container {
            border: var(--vs-chip-border, 1px solid var(--vs-primary-comp-font));
            color: var(--vs-chip-fontColor, var(--vs-primary-comp-font));
        }
    }

    @variant dark {
        @apply hover:brightness-104 active:brightness-108;

        &.vs-primary {
            @apply hover:brightness-96 active:brightness-92;
        }
    }
}

